--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Lopes Finance | Gestão Premium</title>
     
+    <!-- Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
+    
     <!-- PWA & SEO -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#0C0B40">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -16,7 +21,7 @@
     <!-- Open Graph (Social Media) -->
     <meta property="og:title" content="Tanzine Finance">
     <meta property="og:description" content="Gestão financeira premium com Inteligência Artificial.">
-    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/10543/10543317.png">
+    <meta property="og:image" content="/icons/icon-512.png">
     <meta property="og:type" content="website">
 
     <script src="https://cdn.tailwindcss.com"></script>
